--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@hot-loader/react-dom": "^16.13.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "react": "^16.13.1",
